# zoom-clone-fullstack

./: .gitignore  README.md
backend/: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  dependencies.py  main.py
backend/app/core/: __init__.py  config.py  constants.py  exceptions.py  logger.py  logging_config.py  middleware.py  settings.py
backend/app/db/: __init__.py  base.py  database.py  engine.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_initial_schema.py  0002_add_user_password_hash.py
backend/app/models/: __init__.py  enums.py  meeting.py  participant.py  user.py
backend/app/repositories/: __init__.py  meeting_repository.py  participant_repository.py  user_repository.py
backend/app/routers/: __init__.py  auth_router.py  meeting_router.py  participant_router.py
backend/app/schemas/: __init__.py  auth.py  meeting.py  participant.py
backend/app/services/: __init__.py  auth_service.py  meeting_service.py  participant_service.py
backend/app/utils/: __init__.py
backend/scripts/: seed.py
docs/: Antigravity_Prompt_Context.md  Backend_Engineering_Constitution.md  Frontend_Engineering_Constitution.md  Interview_Preparation_Guide.md  Scaler_SDE_Fullstack_Assignment_-_Zoom_Clone.docx  Submission_Checklist.md  Zoom_Clone_Engineering_Design_Document.md  Zoom_Clone_Frontend_Implementation_Plan (1).md
frontend/: .gitignore  README.md  next.config.ts  package-lock.json  package.json  postcss.config.js  tailwind.config.ts  tsconfig.app.json  (+2 more)
(+95 files in other folders)
