[project]
name = "zoom-clone-backend"
version = "0.1.0"
description = "Backend API for a Zoom-style video conferencing platform (SDE Fullstack Assignment)."
requires-python = ">=3.12"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# Constitution Section 4.5: E (pycodestyle errors), F (pyflakes),
# I (import sorting), UP (pyupgrade), B (bugbear).
select = ["E", "F", "I", "UP", "B"]
